@@ -4,6 +4,10 @@
   <templates class="wxButton">
     <template name="declaration">#class* $name;</template>
     <template name="construction">$name = new #class( #wxparent $name, $id, $label, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @} );</template>
+    <template name="settings">
+    	#ifnotequal $default "0"
+    	@{ $name->SetDefault(); @}
+    </template>
     <template name="include">@#include &lt;wx/button.h&gt;</template>
     <template name="evt_entry_OnButtonClick">EVT_BUTTON( $id, #handler )</template>
     <template name="evt_connect_OnButtonClick">$name->Connect( wxEVT_COMMAND_BUTTON_CLICKED, #handler, NULL, this );</template>
@@ -13,8 +17,6 @@
     <template name="declaration">#class* $name;</template>
     <template name="construction">$name = new #class( #wxparent $name, $id, $bitmap, $pos, $size, $style #ifnotnull $window_style @{ |$window_style @} );</template>
     <template name="include">@#include &lt;wx/bmpbuttn.h&gt;</template>
-	<template name="evt_entry_OnButtonClick">EVT_BUTTON( $id, #handler )</template>
-	<template name="evt_connect_OnButtonClick">$name->Connect( wxEVT_COMMAND_BUTTON_CLICKED, #handler, NULL, this );</template>
   </templates>
 
   <templates class="wxTextCtrl">
